# terrismen

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: llm-prompts.md  technical-overview.md
terrismen/: app.py  config.py  db.py  debug.py  models.py
terrismen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
terrismen/llm/: __init__.py  base.py  ollama.py  openai_compatible.py
terrismen/services/: chat.py  documents.py  ingestion.py  notes.py  parsers.py  retrieval.py
terrismen/web/static/: app.js  index.html  notes.html  notes.js  settings.html  settings.js  shared.js  styles.css
tests/: test_app.py  test_chat_progress.py  test_config.py  test_db_migrations.py  test_debug.py  test_document_delete.py  test_ingestion_progress.py  test_mysteries.py  test_parsers.py  test_provider_settings.py  test_search.py
