[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrismen"
version = "0.1.0"
description = "Document-grounded note taking and chat with OpenAI-compatible and Ollama providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "openpyxl>=3.1.5",
  "pillow>=11.2.1",
  "pydantic>=2.11.4",
  "pymupdf>=1.25.5",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.2",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5"]

[project.scripts]
terrismen = "terrismen.app:main"

[tool.setuptools.packages.find]
include = ["terrismen*"]

[tool.setuptools.package-data]
terrismen = ["web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
